--- a/package.json
+++ b/package.json
@@ -30,6 +30,6 @@
     "ts-jest": "^26.5.1",
     "ts-node": "^9.1.1",
     "typescript": "^4.1.5",
-    "vite": "^2.0.0-beta.69"
+    "vite": "^2.0.1"
   }
 }
