--- a/package.json
+++ b/package.json
@@ -19,17 +19,18 @@
   "scripts": {
     "build": "tsc && vite build && tsc -P tsconfig.dts.json",
     "test": "jest --coverage",
-    "prepare": "yarn build",
+    "prepare": "pnpm build",
     "format": "prettier --ignore-path .gitignore --write .",
     "format:check": "prettier --ignore-path .gitignore --check ."
   },
   "devDependencies": {
+    "@types/jest": "^26.0.20",
     "jest": "^26.6.3",
     "prettier": "^2.2.1",
     "prettier-plugin-sorted": "^2.0.0",
-    "ts-jest": "^26.5.2",
+    "ts-jest": "^26.5.3",
     "ts-node": "^9.1.1",
-    "typescript": "^4.2.2",
-    "vite": "^2.0.5"
+    "typescript": "^4.2.3",
+    "vite": "^2.1.0"
   }
 }
