--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,8 +15,7 @@ jobs:
       - uses: actions/setup-node@v2
         with:
           node-version: '15'
-      - run: npm i -g pnpm
-      - run: pnpm install
-      - run: pnpm build
-      - run: pnpm test
-      - run: pnpm format:check
+      - run: yarn --frozen-lockfile
+      - run: yarn build
+      - run: yarn test
+      - run: yarn format:check
